fix cropped icon, resize large to double small icon size

--- a/src/Umbraco.Web.UI.Client/src/less/components/application/umb-drawer.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/application/umb-drawer.less
@@ -55,7 +55,7 @@
 /* Our badge - should be moved */
 
 .umb-help-badge {
-    padding: 10px 20px 10px 35px;
+    padding: 10px 20px 10px 55px;
     background: @white;
     position: relative;
     overflow: hidden;
@@ -74,10 +74,10 @@
 }
 
 .umb-help-badge__icon {
-    font-size: 40px;
+    font-size: 36px;
     transform: translate(0,-50%);
     position: absolute;
-    left: -15px;
+    left: 10px;
     top: 50%;
     color: @red-l3;
 }
@@ -153,7 +153,7 @@
 .umb-help-list-item__content {
     display: flex;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 20px 10px 10px;
 }
 
 .umb-help-list-item > a:hover, 
